final merged version
Things updated:
fixed the DataMapper structure:
- now all datamapper should named as (domainObjectName) + DataMapper
- now all datamapper extends from AbstractDataMapper with type paramenter: e.g. AirplaneDataMapper extends AbstractDataMapper<Airplane>
- now data mapper only have following methods available{
insert, update, delete, deleteById, getAll(), findById, find() with HashMap, and find() with conditions
} all methods are commented for ease of use.